// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render toggleGridButton component render click correctly 1`] = `
<button
  className="test"
  onClick={[Function]}
  type="button"
>
  <span
    className="toggleGridButtonMask"
  />
</button>
`;

exports[`render toggleGridButton component render component grid view correctly 1`] = `
<button
  className="test active"
  onClick={[Function]}
  type="button"
>
  <span
    className="toggleGridButtonMask"
  />
</button>
`;

exports[`render toggleGridButton component render component table view correctly 1`] = `
<button
  className="test"
  onClick={[Function]}
  type="button"
>
  <span
    className="toggleGridButtonMask"
  />
</button>
`;
